[tool.poetry]
name = "pyearl"
version = "0.1.0"
description = ""
authors = ["lim-mil <limyel@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
werkzeug = "^1.0.1"
filetype = "^1.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

